# Stellaris-Mod-Manager

./: README.md  build.bat  dev.bat  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_sort.rs  backups.rs  collections.rs  conflicts.rs  descriptor.rs  lib.rs  loc_parser.rs  log_tail.rs  main.rs  mods.rs  patches.rs  paths.rs  pdx_parser.rs  resolutions.rs  steamcmd.rs  updates.rs  workshop.rs
src/components/: BisectBar.tsx  ModCard.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Dialog.tsx  Input.tsx  Switch.tsx
src/lib/: bisect.ts  confirm.tsx  deps.ts  i18n.ts  open.ts  theme.ts  utils.ts  version.ts
src/views/: CollectionsView.tsx  ConflictsView.tsx  DownloadView.tsx  LoadOrderView.tsx  LogsView.tsx  ModsView.tsx  SettingsView.tsx
