[package]
name = "stellarismodmanager"
version = "0.2.1"
description = "Stellaris Mod Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "stellarismodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
zip = "2"
walkdir = "2"
anyhow = "1"
thiserror = "2"
scraper = "0.20"
regex = "1"
urlencoding = "2"
base64 = "0.22"
open = "5"
jomini = "0.34"
